--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pmjdy"]
 	path = pmjdy
-	url = git@github.com:datameet-pune/pmjdy.git
+	url = https://github.com/datameet-pune/pmjdy.git
